# vol-surface-engine

./: CMakeLists.txt  LICENSE  README.md  TODO.md  bs_test  main.py  pyproject.toml  test
data/: aapl_calls.csv  aapl_dividends.csv  aapl_puts.csv  aapl_spot.csv  treasury_rates.csv
include/calibration/: ImpliedVol.hpp  LocalVol.hpp  SSVI.hpp
include/data/: CSVReader.hpp  DateUtils.hpp  DivCurve.hpp  MarketData.hpp  RateCurve.hpp
include/opt/: NelderMead.hpp
include/pde/: Grid.hpp  PDEPricer.hpp  Tridiag.hpp
include/pricing/: blackscholes.hpp
scripts/: fetch_market_data.py
src/: main.cpp
src/calibration/: ImpliedVol.cpp  LocalVol.cpp  SSVI.cpp
src/data/: DateUtils.cpp  DivCurve.cpp  MarketData.cpp  RateCurve.cpp
src/pde/: Grid.cpp  PDEPricer.cpp  Tridiag.cpp
src/pricing/: blackscholes.cpp
